src/objects/Freshbooks_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Freshbooks Invoices</relationshipLabel>
        <relationshipName>Freshbooks_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Outstanding__c</fullName>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Invoice_ID__c</fullName>
        <externalId>true</externalId>
        <label>Freshbooks Invoice ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Freshbooks Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Freshbooks Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freshbooks Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>